--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="contact">
         <h2>Contact Support</h2>
         <p>Having issues or want to suggest a feature? Contact us at:</p>
-        <p><a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p><a href="mailto:info@splizzy.app">info@splizzy,app</a></p>
     </div>
 
     <h2>Version History</h2>
