--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colorly Support</title>
+    <title>Colorly - Privacy Policy & Terms of Use</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
@@ -13,66 +13,125 @@
             padding: 20px;
             color: #333;
         }
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 0.5em;
+        h1, h2, h3 {
             color: #000;
         }
-        h2 {
-            font-size: 1.5em;
-            margin-top: 1.5em;
-            color: #222;
-        }
-        .contact {
+        h1 { font-size: 2.5em; }
+        h2 { font-size: 1.5em; margin-top: 1.5em; }
+        h3 { font-size: 1.2em; margin-top: 1.2em; }
+        .section {
             background: #f5f5f5;
             padding: 20px;
             border-radius: 10px;
             margin: 20px 0;
         }
-        .feature {
-            margin-bottom: 15px;
+        .legal {
+            font-size: 0.9em;
+            background: #f8f8f8;
+            padding: 15px;
+            border-left: 3px solid #007AFF;
+            margin: 10px 0;
         }
+        .feature { margin-bottom: 15px; }
         a {
             color: #007AFF;
             text-decoration: none;
         }
-        a:hover {
-            text-decoration: underline;
+        a:hover { text-decoration: underline; }
+        .last-updated {
+            color: #666;
+            font-size: 0.9em;
+            font-style: italic;
         }
     </style>
 </head>
 <body>
-    <h1>🎨 Colorly Support</h1>
-    
-    <p>Welcome to the support page for Colorly, your minimalist color generator for iOS.</p>
+    <h1>🎨 Colorly</h1>
+    <p class="last-updated">Last Updated: January 2024</p>
 
-    <h2>Features</h2>
-    <div class="feature">• Generate random colors with a single tap</div>
-    <div class="feature">• Copy hex codes instantly</div>
-    <div class="feature">• View your color history</div>
-    <div class="feature">• Beautiful, intuitive interface</div>
-    <div class="feature">• Smooth animations and transitions</div>
+    <div class="section">
+        <h2>Terms of Use</h2>
+        <p>By downloading, installing, or using Colorly ("the App"), you agree to be bound by these Terms of Use. If you do not agree to these terms, do not use the App.</p>
 
-    <h2>How to Use</h2>
-    <p><strong>Generate Colors:</strong> Simply tap the "Generate" button to create a new random color.</p>
-    <p><strong>Copy Color Code:</strong> Tap the displayed hex code to copy it to your clipboard.</p>
-    <p><strong>View History:</strong> Tap the clock icon to see your previously generated colors.</p>
-    <p><strong>Apply Previous Color:</strong> In the history view, tap any color to apply it to the main screen.</p>
-
-    <h2>Frequently Asked Questions</h2>
-    <p><strong>Q: Does Colorly work offline?</strong><br>
-    A: Yes! Colorly works completely offline and doesn't require an internet connection.</p>
-
-    <p><strong>Q: Does Colorly collect any data?</strong><br>
-    A: No. Colorly doesn't collect any personal data or analytics.</p>
-
-    <div class="contact">
-        <h2>Contact Support</h2>
-        <p>Having issues or want to suggest a feature? Contact us at:</p>
-        <p><a href="mailto:info@splizzy.app">info@splizzy.app</a></p>
+        <div class="legal">
+            <h3>Disclaimer of Warranties</h3>
+            <p>THE APP IS PROVIDED "AS IS" AND "AS AVAILABLE," WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE APP IS WITH YOU.</p>
+            
+            <h3>Limitation of Liability</h3>
+            <p>IN NO EVENT SHALL THE DEVELOPERS, COPYRIGHT HOLDERS, OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS APP, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
+        </div>
     </div>
 
-    <h2>Version History</h2>
-    <p><strong>Version 1.0</strong> - Initial release</p>
+    <div class="section">
+        <h2>Privacy Policy</h2>
+        <p>This privacy policy is designed to inform you about the absence of data collection and processing in our App.</p>
+
+        <h3>Data Collection and Storage</h3>
+        <p>The App:</p>
+        <ul>
+            <li>Does NOT collect any personal data</li>
+            <li>Does NOT track user behavior</li>
+            <li>Does NOT use analytics</li>
+            <li>Does NOT communicate with any servers</li>
+            <li>Does NOT store any data outside your device</li>
+        </ul>
+
+        <p>Any color history is stored exclusively on your local device and can be permanently deleted by uninstalling the App.</p>
+
+        <h3>Third-Party Services</h3>
+        <p>The App does not integrate with or utilize any third-party services, analytics tools, or tracking mechanisms.</p>
+
+        <div class="legal">
+            <h3>GDPR Compliance</h3>
+            <p>Under the EU General Data Protection Regulation (GDPR), we confirm that:</p>
+            <ul>
+                <li>No personal data is collected or processed</li>
+                <li>No data is transferred outside your device</li>
+                <li>No user profiling occurs</li>
+                <li>No data sharing with third parties occurs</li>
+            </ul>
+            <p>As no personal data is collected or processed, most GDPR rights (access, rectification, erasure, etc.) are not applicable.</p>
+        </div>
+
+        <h3>California Consumer Privacy Act (CCPA) Notice</h3>
+        <p>The App does not sell, share, or collect any personal information as defined under the CCPA.</p>
+
+        <h3>Children's Privacy (COPPA Compliance)</h3>
+        <p>The App does not knowingly collect any personal information from children under 13 or any other users. The App is compliant with the Children's Online Privacy Protection Act (COPPA) as no personal information is collected from any users.</p>
+    </div>
+
+    <div class="section">
+        <h2>App Features</h2>
+        <div class="feature">• Generate random colors with a single tap</div>
+        <div class="feature">• Copy hex codes instantly</div>
+        <div class="feature">• View your color history (stored locally only)</div>
+        <div class="feature">• Offline functionality</div>
+    </div>
+
+    <div class="section">
+        <h2>Contact Information</h2>
+        <p>For support inquiries:</p>
+        <p><a href="mailto:info@splizzy.app">info@splizzy.app</a></p>
+
+        <div class="legal">
+            <h3>Legal Notices</h3>
+            <p>Any communication sent to the above email address does not constitute any legal or binding obligation on the part of the App developer. Response to inquiries is provided on a best-effort basis without any guarantees of timeliness or resolution.</p>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>Changes to Terms and Privacy Policy</h2>
+        <p>We reserve the right to modify these terms and privacy policy at any time. Changes will be effective immediately upon posting to this page. Your continued use of the App after any changes constitutes acceptance of such changes.</p>
+    </div>
+
+    <div class="legal">
+        <h3>Governing Law</h3>
+        <p>These terms and conditions are governed by and construed in accordance with the laws of the European Union and your local jurisdiction, without regard to its conflict of law principles.</p>
+    </div>
+
+    <div class="section">
+        <h2>Version History</h2>
+        <p><strong>Version 1.0</strong> - Initial release</p>
+    </div>
 </body>
-</html> 
+</html>
