--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tintly - Privacy Policy & Terms of Use</title>
+    <title>Color Inspo - Privacy Policy & Terms of Use</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
@@ -46,12 +46,12 @@
     </style>
 </head>
 <body>
-    <h1>🎨 Tintly</h1>
+    <h1>🎨 Color Inspo</h1>
     <p class="last-updated">Last Updated: January 2024</p>
 
     <div class="section">
         <h2>Terms of Use</h2>
-        <p>By downloading, installing, or using Tintly ("the App"), you agree to be bound by these Terms of Use. If you do not agree to these terms, do not use the App.</p>
+        <p>By downloading, installing, or using Color Inspo ("the App"), you agree to be bound by these Terms of Use. If you do not agree to these terms, do not use the App.</p>
 
         <div class="legal">
             <h3>Disclaimer of Warranties</h3>
