--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Inspo - Privacy Policy & Terms of Use</title>
+    <title>ColorInspo - Privacy Policy & Terms of Use</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
@@ -33,6 +33,15 @@
             margin: 10px 0;
         }
         .feature { margin-bottom: 15px; }
+        .beta {
+            display: inline-block;
+            background: #7B61FF;
+            color: white;
+            padding: 2px 8px;
+            border-radius: 10px;
+            font-size: 0.8em;
+            margin-left: 5px;
+        }
         a {
             color: #007AFF;
             text-decoration: none;
@@ -46,25 +55,38 @@
     </style>
 </head>
 <body>
-    <h1>🎨 Color Inspo</h1>
+    <h1>🎨 ColorInspo</h1>
     <p class="last-updated">Last Updated: January 2024</p>
 
     <div class="section">
         <h2>Terms of Use</h2>
-        <p>By downloading, installing, or using Color Inspo ("the App"), you agree to be bound by these Terms of Use. If you do not agree to these terms, do not use the App.</p>
+        <p>By downloading, installing, or using ColorInspo ("the App"), you agree to be bound by these Terms of Use. If you do not agree to these terms, do not use the App. The App is provided for entertainment and creative purposes only, and any use beyond this scope is at your own risk.</p>
 
         <div class="legal">
             <h3>Disclaimer of Warranties</h3>
-            <p>THE APP IS PROVIDED "AS IS" AND "AS AVAILABLE," WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE APP IS WITH YOU.</p>
+            <p>THE APP IS PROVIDED "AS IS" AND "AS AVAILABLE," WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT. NO WARRANTY IS MADE REGARDING THE ACCURACY, COMPLETENESS, RELIABILITY, OR USEFULNESS OF ANY COLOR RECOMMENDATIONS, MACHINE LEARNING FEATURES, OR OTHER FUNCTIONALITY. THE ENTIRE RISK AS TO THE QUALITY, PERFORMANCE, AND USE OF THE APP IS WITH YOU.</p>
             
             <h3>Limitation of Liability</h3>
-            <p>IN NO EVENT SHALL THE DEVELOPERS, COPYRIGHT HOLDERS, OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS APP, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
+            <p>TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, IN NO EVENT SHALL THE DEVELOPERS, COPYRIGHT HOLDERS, OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, PUNITIVE OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; BUSINESS INTERRUPTION; REPUTATIONAL HARM; OR ANY COMMERCIAL DAMAGES OR LOSSES) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS APP OR ITS FEATURES, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
+
+            <h3>Beta Features Disclaimer</h3>
+            <p>FEATURES MARKED AS "BETA" ARE PROVIDED ON AN "AS IS" BASIS AND MAY BE EXPERIMENTAL, INCOMPLETE, AND SUBJECT TO CHANGES OR REMOVAL WITHOUT NOTICE. THE DEVELOPER MAKES NO WARRANTIES OR GUARANTEES REGARDING THE FUNCTIONALITY, RELIABILITY, OR CONTINUED AVAILABILITY OF BETA FEATURES. USE OF BETA FEATURES IS ENTIRELY AT YOUR OWN RISK.</p>
+
+            <h3>Use Restrictions</h3>
+            <p>You agree not to:</p>
+            <ul>
+                <li>Use the App for any commercial or business purposes</li>
+                <li>Hold the developer responsible for any decisions made based on the App's output</li>
+                <li>Attempt to reverse engineer, modify, or create derivative works of the App</li>
+                <li>Use the App in any way that could damage, disable, or impair the App</li>
+                <li>Make any claims about the App's accuracy or reliability in professional contexts</li>
+            </ul>
         </div>
     </div>
 
     <div class="section">
         <h2>Privacy Policy</h2>
-        <p>This privacy policy is designed to inform you about the absence of data collection and processing in our App.</p>
+        <p>This privacy policy is designed to inform you about how your data is handled in our App. By using the App, you acknowledge and accept that while we implement reasonable practices to protect local data, no method of data storage is 100% secure.</p>
 
         <h3>Data Collection and Storage</h3>
         <p>The App:</p>
@@ -76,7 +98,23 @@
             <li>Does NOT store any data outside your device</li>
         </ul>
 
-        <p>Any color history is stored exclusively on your local device and can be permanently deleted by uninstalling the App.</p>
+        <h3>Local Data Storage</h3>
+        <p>The App stores the following data exclusively on your local device:</p>
+        <ul>
+            <li>Color history</li>
+            <li>Favorite colors</li>
+            <li>App settings</li>
+            <li>Color preferences for machine learning features</li>
+        </ul>
+
+        <h3>Machine Learning Features <span class="beta">BETA</span></h3>
+        <p>The App includes machine learning capabilities that:</p>
+        <ul>
+            <li>Run entirely on your device</li>
+            <li>Learn from your color preferences</li>
+            <li>Do NOT share your preferences or learning data</li>
+            <li>Can be reset by clearing app data or uninstalling</li>
+        </ul>
 
         <h3>Third-Party Services</h3>
         <p>The App does not integrate with or utilize any third-party services, analytics tools, or tracking mechanisms.</p>
@@ -87,10 +125,10 @@
             <ul>
                 <li>No personal data is collected or processed</li>
                 <li>No data is transferred outside your device</li>
-                <li>No user profiling occurs</li>
+                <li>No user profiling occurs beyond local device learning</li>
                 <li>No data sharing with third parties occurs</li>
             </ul>
-            <p>As no personal data is collected or processed, most GDPR rights (access, rectification, erasure, etc.) are not applicable.</p>
+            <p>As no personal data is collected or processed outside your device, most GDPR rights (access, rectification, erasure, etc.) are not applicable. You can delete all local data by uninstalling the App.</p>
         </div>
 
         <h3>California Consumer Privacy Act (CCPA) Notice</h3>
@@ -98,14 +136,80 @@
 
         <h3>Children's Privacy (COPPA Compliance)</h3>
         <p>The App does not knowingly collect any personal information from children under 13 or any other users. The App is compliant with the Children's Online Privacy Protection Act (COPPA) as no personal information is collected from any users.</p>
+
+        <div class="legal">
+            <h3>Indemnification</h3>
+            <p>You agree to indemnify, defend, and hold harmless the developer from and against any claims, liabilities, damages, losses, costs, expenses, or fees (including reasonable attorneys' fees) arising from your use or misuse of the App, violation of these terms, or violation of any rights of any other person or entity.</p>
+        </div>
     </div>
 
     <div class="section">
         <h2>App Features</h2>
         <div class="feature">• Generate random colors with a single tap</div>
-        <div class="feature">• Copy hex codes instantly</div>
-        <div class="feature">• View your color history (stored locally only)</div>
-        <div class="feature">• Offline functionality</div>
+        <div class="feature">• Copy color codes in multiple formats (HEX, RGB, HSL, HSB, CMYK)</div>
+        <div class="feature">• View and manage your color history</div>
+        <div class="feature">• Save favorite colors</div>
+        <div class="feature">• Generate color variations and harmonies</div>
+        <div class="feature">• Color Discovery with personalized recommendations <span class="beta">BETA</span></div>
+        <div class="feature">• Completely offline functionality</div>
+    </div>
+
+    <div class="section">
+        <h2>How to Use ColorInspo</h2>
+        
+        <h3>Getting Started</h3>
+        <p>When you first open ColorInspo, you'll see the main color generator screen. Here you can:</p>
+        <ul>
+            <li>Tap anywhere on the screen to generate a new random color</li>
+            <li>Tap the color code to copy it to your clipboard</li>
+            <li>Use the format picker to switch between different color code formats</li>
+            <li>Tap the heart icon to favorite a color</li>
+        </ul>
+
+        <h3>Managing Colors</h3>
+        <p>ColorInspo provides several ways to organize and manage your colors:</p>
+        <ul>
+            <li><strong>History:</strong> Access your recently generated colors in the history view</li>
+            <li><strong>Favorites:</strong> Save colors you love by tapping the heart icon - they'll stay in your favorites until you remove them</li>
+            <li><strong>Color Codes:</strong> Switch between HEX, RGB, HSL, HSB, and CMYK formats anytime</li>
+        </ul>
+
+        <h3>Color Variations</h3>
+        <p>To explore variations of a color:</p>
+        <ul>
+            <li>Select any color from your history or favorites</li>
+            <li>Tap "Show Variations" to see different shades, tints, and tones</li>
+            <li>Use the harmony options to find complementary, analogous, or triadic color combinations</li>
+        </ul>
+
+        <h3>Color Discovery <span class="beta">BETA</span></h3>
+        <p>The Color Discovery feature helps you find colors tailored to your taste:</p>
+        <ul>
+            <li>Access the Color Discovery section from the main menu</li>
+            <li>Swipe right on colors you like, left on ones you don't</li>
+            <li>The app learns from your preferences to suggest better matches</li>
+            <li>View insights about your color preferences in the statistics section</li>
+        </ul>
+        <div class="legal">
+            <p>Note: Color Discovery is a beta feature and may be refined or changed based on user feedback. The machine learning model runs entirely on your device and may take time to learn your preferences.</p>
+        </div>
+
+        <h3>Tips & Tricks</h3>
+        <ul>
+            <li>Double-tap a color to quickly copy its code</li>
+            <li>Long-press a color in history to see additional options</li>
+            <li>Use the search bar in history to find specific colors by their code</li>
+            <li>Adjust your preferred color format in settings to see it by default</li>
+        </ul>
+
+        <h3>Troubleshooting</h3>
+        <p>If you encounter any issues:</p>
+        <ul>
+            <li>Ensure you're running the latest version of the app</li>
+            <li>Try force-closing and reopening the app</li>
+            <li>Check if you have sufficient storage space on your device</li>
+            <li>For beta features, try clearing the app's cache if you experience unexpected behavior</li>
+        </ul>
     </div>
 
     <div class="section">
@@ -115,23 +219,31 @@
 
         <div class="legal">
             <h3>Legal Notices</h3>
-            <p>Any communication sent to the above email address does not constitute any legal or binding obligation on the part of the App developer. Response to inquiries is provided on a best-effort basis without any guarantees of timeliness or resolution.</p>
+            <p>Any communication sent to the above email address:</p>
+            <ul>
+                <li>Does not constitute any legal or binding obligation on the part of the App developer</li>
+                <li>Will be handled on a best-effort basis without any guarantees of response or resolution</li>
+                <li>Does not establish any professional or fiduciary relationship</li>
+                <li>May be disregarded at the developer's sole discretion</li>
+                <li>Should not include any confidential or sensitive information</li>
+            </ul>
+            <p>The developer reserves the right to cease communication at any time without notice or explanation.</p>
         </div>
     </div>
 
     <div class="section">
         <h2>Changes to Terms and Privacy Policy</h2>
-        <p>We reserve the right to modify these terms and privacy policy at any time. Changes will be effective immediately upon posting to this page. Your continued use of the App after any changes constitutes acceptance of such changes.</p>
+        <p>We reserve the right to modify these terms and privacy policy at any time, without notice, and at our sole discretion. Changes will be effective immediately upon posting to this page. Your continued use of the App after any changes constitutes acceptance of such changes. It is your responsibility to review these terms periodically.</p>
     </div>
 
     <div class="legal">
-        <h3>Governing Law</h3>
-        <p>These terms and conditions are governed by and construed in accordance with the laws of the European Union and your local jurisdiction, without regard to its conflict of law principles.</p>
+        <h3>Governing Law and Jurisdiction</h3>
+        <p>These terms and conditions are governed by and construed in accordance with the laws of the European Union and your local jurisdiction, without regard to its conflict of law principles. You agree that any legal action or proceeding between you and the developer shall be brought exclusively in the courts located within the European Union, and you hereby accept and submit to the personal jurisdiction of these courts with respect to any legal actions, suits, or proceedings arising out of these terms or your use of the App.</p>
     </div>
 
     <div class="section">
         <h2>Version History</h2>
-        <p><strong>Version 1.0</strong> - Initial release</p>
+        <p><strong>Version 1.0</strong> - Initial release with core color generation features and beta machine learning capabilities</p>
     </div>
 </body>
-</html>
+</html> 
