--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         <div class="feature">• View and manage your color history</div>
         <div class="feature">• Save favorite colors</div>
         <div class="feature">• Generate color variations and harmonies</div>
+        <div class="feature">• Modify colors with precise HSB and RGB controls</div>
         <div class="feature">• Color Discovery with personalized recommendations <span class="beta">BETA</span></div>
         <div class="feature">• Completely offline functionality</div>
     </div>
@@ -210,6 +211,17 @@
             <li>Check if you have sufficient storage space on your device</li>
             <li>For beta features, try clearing the app's cache if you experience unexpected behavior</li>
         </ul>
+
+        <h3>Modifying Colors</h3>
+        <p>ColorInspo allows you to fine-tune any color using precise controls:</p>
+        <ul>
+            <li>Tap the slider icon on any color to open the modify view</li>
+            <li>Switch between HSB (Hue, Saturation, Brightness) and RGB modes</li>
+            <li>Use precise sliders to adjust individual color components</li>
+            <li>See the original and modified colors side by side</li>
+            <li>Copy the modified color code in any supported format</li>
+            <li>Save your changes or reset to the original color</li>
+        </ul>
     </div>
 
     <div class="section">
@@ -243,6 +255,7 @@
 
     <div class="section">
         <h2>Version History</h2>
+        <p><strong>Version 1.1</strong> - Added color modification feature with HSB/RGB controls, improved color discovery UI with glassmorphism design, enhanced analytics view, and various UI refinements</p>
         <p><strong>Version 1.0</strong> - Initial release with core color generation features and beta machine learning capabilities</p>
     </div>
 </body>
