--- a/index.html
+++ b/index.html
@@ -117,31 +117,45 @@
 </head>
 <body>
     <h1>🎨 ColorInspo</h1>
-    <p class="last-updated">Last Updated: January 2024</p>
+    <p class="last-updated">Last Updated: February 2024</p>
 
     <div class="section">
         <h2>Terms of Use</h2>
-        <p>By downloading, installing, or using ColorInspo ("the App"), you agree to be bound by these Terms of Use. If you do not agree to these terms, do not use the App. The App is provided for entertainment and creative purposes only, and any use beyond this scope is at your own risk.</p>
+        <p>By downloading, installing, or using ColorInspo ("the App"), you agree to be bound by these Terms of Use. If you do not agree to these terms, do not use the App. The App is provided for entertainment and creative purposes only, and any use beyond this scope is at your own risk. These Terms of Use are governed by and construed in accordance with the laws of Switzerland, without regard to its conflict of law provisions.</p>
 
         <div class="legal">
+            <h3>Governing Law and Jurisdiction</h3>
+            <p>These Terms and your use of the App are governed by Swiss law. Any disputes arising from or in connection with these Terms or the use of the App shall be subject to the exclusive jurisdiction of the courts of Switzerland. You expressly waive any objection to jurisdiction or venue in such courts.</p>
+
             <h3>Disclaimer of Warranties</h3>
-            <p>THE APP IS PROVIDED "AS IS" AND "AS AVAILABLE," WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT. NO WARRANTY IS MADE REGARDING THE ACCURACY, COMPLETENESS, RELIABILITY, OR USEFULNESS OF ANY COLOR RECOMMENDATIONS, MACHINE LEARNING FEATURES, OR OTHER FUNCTIONALITY. THE ENTIRE RISK AS TO THE QUALITY, PERFORMANCE, AND USE OF THE APP IS WITH YOU.</p>
+            <p>TO THE FULLEST EXTENT PERMITTED BY APPLICABLE LAW, THE APP IS PROVIDED "AS IS" AND "AS AVAILABLE," WITHOUT ANY WARRANTY OR CONDITION OF ANY KIND, EITHER EXPRESS, IMPLIED, OR STATUTORY, INCLUDING, BUT NOT LIMITED TO, ANY IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, TITLE, QUIET ENJOYMENT, NON-INFRINGEMENT, AND ACCURACY. THE DEVELOPER MAKES NO WARRANTY THAT THE APP WILL MEET YOUR REQUIREMENTS, BE AVAILABLE ON AN UNINTERRUPTED, SECURE, OR ERROR-FREE BASIS, OR BE ACCURATE, RELIABLE, FREE OF VIRUSES OR OTHER HARMFUL CODE, COMPLETE, LEGAL, OR SAFE. NO WARRANTY IS MADE REGARDING THE ACCURACY, COMPLETENESS, RELIABILITY, OR USEFULNESS OF ANY COLOR RECOMMENDATIONS, MACHINE LEARNING FEATURES, OR OTHER FUNCTIONALITY. IF APPLICABLE LAW REQUIRES ANY WARRANTIES WITH RESPECT TO THE APP, ALL SUCH WARRANTIES ARE LIMITED IN DURATION TO NINETY (90) DAYS FROM THE DATE OF FIRST DOWNLOAD OR INSTALLATION.</p>
             
             <h3>Limitation of Liability</h3>
-            <p>TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, IN NO EVENT SHALL THE DEVELOPERS, COPYRIGHT HOLDERS, OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, PUNITIVE OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; BUSINESS INTERRUPTION; REPUTATIONAL HARM; OR ANY COMMERCIAL DAMAGES OR LOSSES) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS APP OR ITS FEATURES, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
+            <p>TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, IN NO EVENT SHALL THE DEVELOPER, ITS LICENSORS, AFFILIATES, EMPLOYEES, AGENTS, OFFICERS, OR DIRECTORS BE LIABLE FOR ANY INDIRECT, PUNITIVE, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR EXEMPLARY DAMAGES, INCLUDING WITHOUT LIMITATION DAMAGES FOR LOSS OF PROFITS, GOODWILL, USE, DATA, OR OTHER INTANGIBLE LOSSES, ARISING OUT OF OR RELATING TO YOUR USE OF, OR INABILITY TO USE, THE APP. UNDER NO CIRCUMSTANCES WILL THE DEVELOPER BE RESPONSIBLE FOR ANY DAMAGE, LOSS, OR INJURY RESULTING FROM HACKING, TAMPERING, OR OTHER UNAUTHORIZED ACCESS OR USE OF THE APP OR THE INFORMATION CONTAINED THEREIN. THE DEVELOPER ASSUMES NO LIABILITY OR RESPONSIBILITY FOR ANY: (I) ERRORS, MISTAKES, OR INACCURACIES OF CONTENT; (II) PERSONAL INJURY OR PROPERTY DAMAGE, OF ANY NATURE WHATSOEVER, RESULTING FROM YOUR ACCESS TO OR USE OF THE APP; (III) UNAUTHORIZED ACCESS TO OR USE OF OUR SYSTEMS OR SERVERS AND/OR ANY PERSONAL INFORMATION STORED THEREIN; (IV) BUGS, VIRUSES, TROJAN HORSES, OR THE LIKE WHICH MAY BE TRANSMITTED TO OR THROUGH THE APP BY ANY THIRD PARTY; (V) ERRORS OR OMISSIONS IN ANY CONTENT OR FOR ANY LOSS OR DAMAGE INCURRED AS A RESULT OF THE USE OF ANY CONTENT POSTED, TRANSMITTED, OR OTHERWISE MADE AVAILABLE THROUGH THE APP.</p>
+
+            <h3>Indemnification</h3>
+            <p>You agree to defend, indemnify, and hold harmless the Developer, its licensors, and service providers, and its and their respective officers, directors, employees, contractors, agents, licensors, suppliers, successors, and assigns from and against any claims, liabilities, damages, judgments, awards, losses, costs, expenses, or fees (including reasonable attorneys' fees) arising out of or relating to: (i) your use of the App; (ii) your violation of these Terms; (iii) your violation of any third party right, including without limitation any intellectual property right, publicity, confidentiality, property, or privacy right; or (iv) any claim that your use of the App caused damage to a third party. This defense and indemnification obligation will survive these Terms and your use of the App.</p>
 
             <h3>Beta Features Disclaimer</h3>
-            <p>FEATURES MARKED AS "BETA" ARE PROVIDED ON AN "AS IS" BASIS AND MAY BE EXPERIMENTAL, INCOMPLETE, AND SUBJECT TO CHANGES OR REMOVAL WITHOUT NOTICE. THE DEVELOPER MAKES NO WARRANTIES OR GUARANTEES REGARDING THE FUNCTIONALITY, RELIABILITY, OR CONTINUED AVAILABILITY OF BETA FEATURES. USE OF BETA FEATURES IS ENTIRELY AT YOUR OWN RISK.</p>
+            <p>FEATURES MARKED AS "BETA" ARE PROVIDED ON AN "AS IS" AND "AS AVAILABLE" BASIS AND MAY BE EXPERIMENTAL, INCOMPLETE, AND SUBJECT TO CHANGES OR REMOVAL WITHOUT NOTICE. THE DEVELOPER EXPRESSLY DISCLAIMS ALL WARRANTIES OF ANY KIND, WHETHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT WITH RESPECT TO BETA FEATURES. YOU EXPRESSLY UNDERSTAND AND AGREE THAT YOUR USE OF BETA FEATURES IS AT YOUR SOLE RISK AND THAT THE DEVELOPER SHALL NOT BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR EXEMPLARY DAMAGES ARISING FROM YOUR USE OF BETA FEATURES.</p>
 
-            <h3>Use Restrictions</h3>
-            <p>You agree not to:</p>
+            <h3>Use Restrictions and License</h3>
+            <p>The App is licensed, not sold, to you for use strictly in accordance with these Terms. This license is personal, non-exclusive, non-transferable, non-sublicensable, and limited. You expressly agree not to:</p>
             <ul>
-                <li>Use the App for any commercial or business purposes</li>
-                <li>Hold the developer responsible for any decisions made based on the App's output</li>
-                <li>Attempt to reverse engineer, modify, or create derivative works of the App</li>
-                <li>Use the App in any way that could damage, disable, or impair the App</li>
+                <li>Use the App for any commercial purposes without express written permission</li>
+                <li>Copy, modify, adapt, translate, create derivative works from, distribute, license, sell, transfer, publicly display, publicly perform, transmit, stream, broadcast, or otherwise exploit the App or any portion thereof</li>
+                <li>Reverse engineer, decompile, disassemble, or attempt to derive the source code of the App</li>
+                <li>Remove, circumvent, disable, damage, or otherwise interfere with security-related features of the App</li>
+                <li>Use the App in any way that could damage, disable, overburden, or impair the App</li>
+                <li>Use any robot, spider, crawler, scraper, or other automated means to access the App</li>
                 <li>Make any claims about the App's accuracy or reliability in professional contexts</li>
             </ul>
+
+            <h3>Severability</h3>
+            <p>If any provision of these Terms is held to be unenforceable or invalid, such provision will be changed and interpreted to accomplish the objectives of such provision to the greatest extent possible under applicable law and the remaining provisions will continue in full force and effect.</p>
+
+            <h3>Waiver</h3>
+            <p>No waiver of any term of these Terms shall be deemed a further or continuing waiver of such term or any other term. Any failure to assert any right under these Terms shall not constitute a waiver of such right.</p>
         </div>
     </div>
 
@@ -205,9 +219,23 @@
     </div>
 
     <div class="section">
+        <h2>What's New in Version 1.2.0</h2>
+        <div class="feature">• New Custom Palette Creator - Create your own color combinations with up to 5 colors</div>
+        <div class="feature">• Image Color Extraction - Extract color palettes from your photos</div>
+        <div class="feature">• Saved Palettes - Save and organize your favorite color combinations</div>
+        <div class="feature">• Enhanced Color Modification - Improved color editing with real-time preview</div>
+        <div class="feature">• Modern Glassmorphism UI - Beautiful, modern interface with glass-like effects</div>
+        <div class="feature">• Improved Color Management - Better organization of colors and palettes</div>
+        <div class="feature">• Performance Improvements - Faster color generation and smoother animations</div>
+    </div>
+
+    <div class="section">
         <h2>App Features</h2>
         <div class="feature">• Generate random colors with a single tap</div>
         <div class="feature">• Copy color codes in multiple formats (HEX, RGB, HSL, HSB, CMYK)</div>
+        <div class="feature">• Create custom color palettes with up to 5 colors</div>
+        <div class="feature">• Extract color palettes from images</div>
+        <div class="feature">• Save and organize your favorite palettes</div>
         <div class="feature">• View and manage your color history</div>
         <div class="feature">• Save favorite colors</div>
         <div class="feature">• Generate color variations and harmonies</div>
@@ -226,6 +254,18 @@
             <li>Tap the color code to copy it to your clipboard</li>
             <li>Use the format picker to switch between different color code formats</li>
             <li>Tap the heart icon to favorite a color</li>
+            <li>Create custom palettes from your colors</li>
+            <li>Extract palettes from your photos</li>
+        </ul>
+
+        <h3>Working with Palettes</h3>
+        <p>ColorInspo now offers powerful palette management features:</p>
+        <ul>
+            <li><strong>Custom Palettes:</strong> Create your own color combinations with up to 5 colors</li>
+            <li><strong>Image Extraction:</strong> Upload photos to extract color palettes automatically</li>
+            <li><strong>Save & Organize:</strong> Save your favorite palettes for future reference</li>
+            <li><strong>Easy Editing:</strong> Modify individual colors in your palettes with precise controls</li>
+            <li><strong>Quick Access:</strong> View all your saved palettes in one place</li>
         </ul>
 
         <h3>Managing Colors</h3>
